# PSCMake

./: .editorconfig  PSCMake.psd1  PSCMake.psm1  README.md
.github/workflows/: ci.yaml  pull-request.yaml
Common/: CMake.ps1  Common.ps1  Console.ps1  Ninja.ps1
PSCMake/: PSCMake.psd1  PSCMake.psm1
PSCMake/Common/: CMake.ps1  Common.ps1  Console.ps1  Ninja.ps1
Tests/: Build-CMakeBuild.Tests.ps1  BuildConfigurationsCompleter.Tests.ps1  BuildPresetsCompleter.Tests.ps1  BuildTargetsCompleter.Tests.ps1  CMakePresets.Single.json  ColorInterpolation.Tests.ps1  Configure-CMakeBuild.Tests.ps1  EvaluateCondition.Tests.ps1  Get-MemberValue.Tests.ps1  GetCMakePresets.Tests.ps1  GetConfigurePresetNames.Tests.ps1  MacroReplacement.Tests.ps1  ReferenceBuild.ps1  ResolvePresetProperty.Tests.ps1  TestUtilities.ps1  ToHashTable.Tests.ps1  Using-Location.Tests.ps1  Write-CMakeBuild.Tests.ps1
Tests/ReferenceBuild/: CMakeLists.txt  CMakePresets.json
Tests/ReferencePresets/: CMakePresets.Complex.json  CMakePresets.Inherited.json
